--- a/Calendar/Calendar.Android/Calendar.Android.csproj
+++ b/Calendar/Calendar.Android/Calendar.Android.csproj
@@ -154,5 +154,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\snow3.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\seasontree.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
